<resources>
    <string name="app_name">CafeOrderExam</string>
    <string name="cafe_logo">Логотип кафе.</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="hint_name">Введите ваше имя:</string>
    <string name="hint_password">Введите пароль:</string>
    <string name="button_make_order">СДЕЛАТЬ ЗАКАЗ</string>
    <string name="warning_fill_fields">Все поля должны быть заполнены</string>
    <string name="hello_user">Привет, %s! Что желаете?</string>
    <string name="tea">чай</string>
    <string name="coffee">кофе</string>
    <string name="additions">Что добавить в ваш %s?</string>
    <string name="sugar">Сахар</string>
    <string name="milk">Молоко</string>
    <string name="lemon">Лимон</string>
    <string name="choose_drink">Выберите вид напитка</string>
    <string name="button_discription">Кнопка отправить заказ</string>
    <string name="default_name">клиент</string>
    <string name="default_password">пароль</string>
    <string name="order">Имя: %s\nПароль: %s\nНапиток: %s\nВид напитка: %s\n</string>
    <string name="need_additions">Необходимые добавки: </string>

    <string-array name="choose_of_tea">
        <item>Черный</item>
        <item>Зеленый</item>
        <item>Красный</item>
    </string-array>

    <string-array name="choose_of_coffee">
        <item>Латте</item>
        <item>Американо</item>
        <item>Капучино</item>
    </string-array>


</resources>