<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/lightBrown"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateOrderActivity">

    <TextView
        android:id="@+id/textViewHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_user"
        android:textSize="24sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/darkBrown"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/textViewHello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radioButtonTea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:checked="true"
            android:onClick="onClickChooseDrink"
            android:text="@string/tea"/>

        <RadioButton
            android:id="@+id/radioButtonCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:onClick="onClickChooseDrink"
            android:text="@string/coffee"/>

    </RadioGroup>

    <TextView
        android:id="@+id/textViewAdditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additions"
        android:textSize="24sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_margin="8dp"
        android:textColor="@color/darkBrown"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <CheckBox
        android:id="@+id/checkBoxSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugar"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/checkBoxMilk"/>

    <CheckBox
        android:id="@+id/checkBoxMilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/milk"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions"
        app:layout_constraintStart_toEndOf="@id/checkBoxSugar"
        app:layout_constraintEnd_toStartOf="@id/checkBoxLemon"/>

    <CheckBox
        android:id="@+id/checkBoxLemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lemon"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions"
        app:layout_constraintStart_toEndOf="@id/checkBoxMilk"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewChooseDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_drink"
        android:textSize="24sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_margin="8dp"
        android:textColor="@color/darkBrown"
        app:layout_constraintTop_toBottomOf="@id/checkBoxMilk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinnerChooseCoffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/choose_of_coffee"
        android:visibility="invisible"
        android:layout_margin="8dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textViewChooseDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/spinnerChooseTea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/choose_of_tea"
        android:visibility="visible"
        android:layout_margin="8dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textViewChooseDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/buttonSendOrder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/button"
        android:layout_margin="8dp"
        android:onClick="onClickSendOrder"
        android:contentDescription="@string/button_discription"
        app:layout_constraintTop_toBottomOf="@id/spinnerChooseCoffee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>